Begin working on basic robo support.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,5 @@ dependencies {
     androidTestImplementation "androidx.work:work-testing:$rootProject.workVersion"
     androidTestImplementation "com.google.truth:truth:$rootProject.truthVersion"
     testImplementation "junit:junit:$rootProject.junitVersion"
+    androidTestImplementation project(path: ':androidtest-library')
 }
