--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,12 @@ buildscript {
         espressoVersion = '3.1.1'
         fragmentVersion = '1.1.0-alpha09'
         glideVersion = '4.10.0'
-        gradleVersion = '3.5.1'
-        gsonVersion = '2.8.2'
+        gradleVersion = '3.5.3'
+        gsonVersion = '2.8.6'
         junitVersion = '4.12'
-        kotlinVersion = '1.3.41'
+        kotlinVersion = '1.3.61'
         ktlintVersion = '0.33.0'
-        ktxVersion = '1.0.2'
+        ktxVersion = '1.1.0'
         lifecycleVersion = '2.2.0-alpha01'
         materialVersion = '1.1.0-alpha09'
         navigationVersion = '2.0.0'
@@ -55,7 +55,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath "com.android.tools.build:gradle:${gradleVersion}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
     }
