--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@
  * limitations under the License.
  */
 
-include ':app'
+include ':app', ':androidtest-library'
+project(':androidtest-library').projectDir = new File('../android-library/androidtest-library')
