--- a/build.gradle
+++ b/build.gradle
@@ -24,29 +24,29 @@ buildscript {
 
         // App dependencies
         appCompatVersion = '1.1.0'
-        constraintLayoutVersion = '2.0.0-beta3'
-        coreTestingVersion = '2.0.0'
-        coroutinesVersion = "1.3.0-M2"
-        espressoVersion = '3.1.1'
-        fragmentVersion = '1.1.0-alpha09'
-        glideVersion = '4.10.0'
-        gradleVersion = '3.5.3'
+        constraintLayoutVersion = '2.0.0-beta4'
+        coreTestingVersion = '2.1.0'
+        coroutinesVersion = '1.3.3'
+        espressoVersion = '3.2.0'
+        fragmentVersion = '1.2.2'
+        glideVersion = '4.11.0'
+        gradleVersion = '3.6.0'
         gsonVersion = '2.8.6'
-        junitVersion = '4.12'
+        junitVersion = '4.13'
         kotlinVersion = '1.3.61'
         ktlintVersion = '0.33.0'
-        ktxVersion = '1.1.0'
-        lifecycleVersion = '2.2.0-alpha01'
-        materialVersion = '1.1.0-alpha09'
-        navigationVersion = '2.0.0'
-        recyclerViewVersion = '1.1.0-alpha05'
-        roomVersion = '2.1.0'
+        lifecycleVersion = '2.2.0'
+        materialVersion = '1.2.0-alpha05'
+        navigationVersion = '2.2.1'
+        recyclerViewVersion = '1.2.0-alpha01'
+        roomVersion = '2.2.4'
         runnerVersion = '1.0.1'
-        truthVersion = '0.42'
-        testExtJunit = '1.1.0'
+        truthVersion = '1.0.1'
+        testExtJunit = '1.1.1'
         uiAutomatorVersion = '2.2.0'
         viewPagerVersion = '1.0.0'
-        workVersion = '2.1.0'
+        workVersion = '2.3.2'
+        ktxVersion = '1.2.0'
     }
 
     repositories {
